# AdventOfCode

./: .gitignore  advent-of-code.cabal
2023/Day01/: Puzzle1.hs  Puzzle2.hs
2023/Day02/: Puzzle1.hs  Puzzle2.hs
2023/Day03/: Puzzle1.hs  Puzzle2.hs
2023/Day04/: Puzzle1.hs  Puzzle2.hs
2023/Day05/: Puzzle1.hs  Puzzle2.hs
2023/Day06/: Puzzle1.hs  Puzzle2.hs
2023/Day07/: Puzzle1.hs  Puzzle2.hs
2023/Day08/: Puzzle1.hs  Puzzle2.hs
2024/Day01/: Puzzle2.hs
2024/Day02/: Puzzle2.hs
2024/Day04/: Puzzle2.hs
2024/Day05/: Puzzle1.hs
2024/Day06/: Puzzle2.hs
2024/Day07/: Puzzle2.hs
2024/Day10/: Puzzle1.hs
2024/Day11/: Puzzle1.hs
2024/Day12/: Puzzle1.hs  Puzzle2.hs
2024/Day13/: Puzzle1.hs  Puzzle2.hs
2024/Day14/: Puzzle1.hs  Puzzle2.hs
2024/Day15/: Puzzle1.hs  Puzzle2.hs
2024/Day17/: Puzzle2.hs
2024/Day19/: Puzzle2.hs
2024/Day20/: Puzzle1.hs
2024/Day21/: Puzzle1-Old.hs
2024/Day22/: Puzzle1.hs
2024/Day25/: Puzzle.hs
Day01/: Puzzle1.hs  Puzzle2.hs
Day02/: Puzzle1.hs  Puzzle2.hs
Day03/: Puzzle1.hs  Puzzle2.hs
Day04/: Puzzle1.hs  Puzzle2.hs
Day05/: Puzzle2.hs
Day06/: Puzzle1.hs  Puzzle2.hs
Day07/: Puzzle1.hs
Day08/: Puzzle1.hs  Puzzle2.hs
Day09/: Puzzle1.hs  Puzzle2.hs
Day10/: Puzzle1.hs  Puzzle2.hs
Day11/: Puzzle2.hs
Day12/: Puzzle1.hs  Puzzle2.hs
Day13/: Puzzle1.hs  Puzzle2.hs
Day14/: Puzzle1.hs  Puzzle2.hs
Day15/: Puzzle1.hs  Puzzle2.hs
Day16/: Puzzle1.hs  Puzzle2.hs
Day17/: Puzzle1.hs  Puzzle2.hs
Day18/: Puzzle1.hs  Puzzle2.hs
Day19/: Puzzle1.hs  Puzzle2.hs
Day20/: Puzzle1.hs  Puzzle2.hs
Day21/: Puzzle1-Old.hs  Puzzle1.hs  Puzzle2.hs
Day22/: Puzzle1.hs  Puzzle2.hs
Day23/: Puzzle1.hs  Puzzle2.hs
Day24/: Puzzle1.hs  Puzzle2.hs
Day25/: Puzzle.hs
app/: Main.hs  SelectYear.hs  Solution.hs  Util.hs  Year2019.hs  Year2020.hs  Year2021.hs  Year2022.hs  Year2023.hs  Year2024.hs
app/Util/: Args.hs  Http.hs  OCR.hs  Util.hs
app/Year2019/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  IntcodeComputer.hs
app/Year2020/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
app/Year2021/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
app/Year2022/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
app/Year2023/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
app/Year2024/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
app/Years/: SelectYear.hs  Year2017.hs  Year2018.hs  Year2019.hs  Year2020.hs  Year2021.hs  Year2022.hs  Year2023.hs  Year2024.hs  Year2025.hs
app/Years/Year2017/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
app/Years/Year2018/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
app/Years/Year2019/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  IntcodeComputer.hs
app/Years/Year2020/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
app/Years/Year2021/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
app/Years/Year2022/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
app/Years/Year2023/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
app/Years/Year2024/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
app/Years/Year2025/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs
