cabal-version:      3.0

name:               advent-of-code
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Rapha149
maintainer:         rapha@rapha149.de
homepage:           https://github.com/Rapha149/AdventOfCode
build-type:         Simple

common warnings
    ghc-options: -Wall -dynamic

executable advent-of-code
    import:           warnings
    main-is:          Main.hs

    other-modules:
        Util,
        SelectYear,
        Year2021,
        Year2021.Day01,
        Year2021.Day02,
        Year2021.Day03,
        Year2021.Day04,
        Year2021.Day05,
        Year2021.Day06,
        Year2021.Day07,
        Year2021.Day08,
        Year2021.Day09,
        Year2021.Day10,
        Year2021.Day11,
        Year2021.Day12,
        Year2021.Day13,
        Year2021.Day14,
        Year2021.Day15,
        Year2021.Day16,
        Year2021.Day17,
        Year2021.Day18,
        Year2021.Day19,
        Year2021.Day20,
        Year2021.Day21,
        Year2021.Day22,
        Year2021.Day23,
        Year2021.Day24,
        Year2021.Day25,
        Year2022,
        Year2022.Day01,
        Year2022.Day02,
        Year2022.Day03,
        Year2022.Day04,
        Year2022.Day05,
        Year2022.Day06,
        Year2022.Day07,
        Year2022.Day08,
        Year2022.Day09,
        Year2022.Day10,
        Year2022.Day11,
        Year2022.Day12,
        Year2022.Day13,
        Year2022.Day14,
        Year2022.Day15,
        Year2022.Day16,
        Year2022.Day17,
        Year2022.Day18,
        Year2022.Day19,
        Year2022.Day20,
        Year2022.Day21,
        Year2022.Day22,
        Year2022.Day23,
        Year2022.Day24,
        Year2022.Day25,
        Year2023,
        Year2023.Day01,
        Year2023.Day02,
        Year2023.Day03,
        Year2023.Day04,
        Year2023.Day05,
        Year2023.Day06,
        Year2023.Day07,
        Year2023.Day08,
        Year2023.Day09,
        Year2023.Day10,
        Year2023.Day11,
        Year2023.Day12,
        Year2023.Day13,
        Year2023.Day14,
        Year2023.Day15,
        Year2023.Day16,
        Year2023.Day17,
        Year2023.Day18,
        Year2023.Day19,
        Year2023.Day20,
        Year2023.Day21,
        Year2023.Day22,
        Year2023.Day23,
        Year2023.Day24,
        Year2023.Day25,
        Year2024,
        Year2024.Day01,
        Year2024.Day02,
        Year2024.Day03,
        Year2024.Day04,
        Year2024.Day05,
        Year2024.Day06,
        Year2024.Day07,
        Year2024.Day08,
        Year2024.Day09,
        Year2024.Day10,
        Year2024.Day11,
        Year2024.Day12,
        Year2024.Day13,
        Year2024.Day14,
        Year2024.Day15,
        Year2024.Day16,
        Year2024.Day17,
        Year2024.Day18,
        Year2024.Day19,
        Year2024.Day20,
        Year2024.Day21,
        Year2024.Day22,
        Year2024.Day23,
        Year2024.Day24,
        Year2024.Day25

    build-depends:
        base,
        bytestring,
        Clipboard,
        containers >=0.7,
        directory,
        dotenv,
        extra,
        fingertree,
        hex,
        hmatrix,
        http-client,
        http-conduit,
        http-types,
        regex-tdfa,
        simple-vec3,
        split,
        text,
        time

    hs-source-dirs:   app
    default-language: GHC2024
    default-extensions:
        NamedFieldPuns
        RecordWildCards
        OverloadedRecordDot
