cabal-version:      3.0

name:               advent-of-code
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Rapha149
maintainer:         rapha@rapha149.de
homepage:           https://github.com/Rapha149/AdventOfCode
build-type:         Simple

common warnings
    ghc-options: -Wall -dynamic

executable advent-of-code
    import:           warnings
    main-is:          Main.hs

    other-modules:
        Util.Util,
        Util.Args,
        Util.Http,
        Util.OCR,
        Years.SelectYear,
        Years.Year2018,
        Years.Year2018.Day01,
        Years.Year2018.Day02,
        Years.Year2018.Day03,
        Years.Year2018.Day04,
        Years.Year2018.Day05,
        Years.Year2018.Day06,
        Years.Year2018.Day07,
        Years.Year2018.Day08,
        Years.Year2018.Day09,
        Years.Year2018.Day10,
        Years.Year2018.Day11,
        Years.Year2018.Day12,
        Years.Year2018.Day13,
        Years.Year2018.Day14,
        Years.Year2018.Day15,
        Years.Year2018.Day16,
        Years.Year2018.Day17,
        Years.Year2018.Day18,
        Years.Year2018.Day19,
        Years.Year2018.Day20,
        Years.Year2018.Day21,
        Years.Year2018.Day22,
        Years.Year2018.Day23,
        Years.Year2018.Day24,
        Years.Year2018.Day25,
        Years.Year2019,
        Years.Year2019.IntcodeComputer,
        Years.Year2019.Day01,
        Years.Year2019.Day02,
        Years.Year2019.Day03,
        Years.Year2019.Day04,
        Years.Year2019.Day05,
        Years.Year2019.Day06,
        Years.Year2019.Day07,
        Years.Year2019.Day08,
        Years.Year2019.Day09,
        Years.Year2019.Day10,
        Years.Year2019.Day11,
        Years.Year2019.Day12,
        Years.Year2019.Day13,
        Years.Year2019.Day14,
        Years.Year2019.Day15,
        Years.Year2019.Day16,
        Years.Year2019.Day17,
        Years.Year2019.Day18,
        Years.Year2019.Day19,
        Years.Year2019.Day20,
        Years.Year2019.Day21,
        Years.Year2019.Day22,
        Years.Year2019.Day23,
        Years.Year2019.Day24,
        Years.Year2019.Day25,
        Years.Year2020,
        Years.Year2020.Day01,
        Years.Year2020.Day02,
        Years.Year2020.Day03,
        Years.Year2020.Day04,
        Years.Year2020.Day05,
        Years.Year2020.Day06,
        Years.Year2020.Day07,
        Years.Year2020.Day08,
        Years.Year2020.Day09,
        Years.Year2020.Day10,
        Years.Year2020.Day11,
        Years.Year2020.Day12,
        Years.Year2020.Day13,
        Years.Year2020.Day14,
        Years.Year2020.Day15,
        Years.Year2020.Day16,
        Years.Year2020.Day17,
        Years.Year2020.Day18,
        Years.Year2020.Day19,
        Years.Year2020.Day20,
        Years.Year2020.Day21,
        Years.Year2020.Day22,
        Years.Year2020.Day23,
        Years.Year2020.Day24,
        Years.Year2020.Day25,
        Years.Year2021,
        Years.Year2021.Day01,
        Years.Year2021.Day02,
        Years.Year2021.Day03,
        Years.Year2021.Day04,
        Years.Year2021.Day05,
        Years.Year2021.Day06,
        Years.Year2021.Day07,
        Years.Year2021.Day08,
        Years.Year2021.Day09,
        Years.Year2021.Day10,
        Years.Year2021.Day11,
        Years.Year2021.Day12,
        Years.Year2021.Day13,
        Years.Year2021.Day14,
        Years.Year2021.Day15,
        Years.Year2021.Day16,
        Years.Year2021.Day17,
        Years.Year2021.Day18,
        Years.Year2021.Day19,
        Years.Year2021.Day20,
        Years.Year2021.Day21,
        Years.Year2021.Day22,
        Years.Year2021.Day23,
        Years.Year2021.Day24,
        Years.Year2021.Day25,
        Years.Year2022,
        Years.Year2022.Day01,
        Years.Year2022.Day02,
        Years.Year2022.Day03,
        Years.Year2022.Day04,
        Years.Year2022.Day05,
        Years.Year2022.Day06,
        Years.Year2022.Day07,
        Years.Year2022.Day08,
        Years.Year2022.Day09,
        Years.Year2022.Day10,
        Years.Year2022.Day11,
        Years.Year2022.Day12,
        Years.Year2022.Day13,
        Years.Year2022.Day14,
        Years.Year2022.Day15,
        Years.Year2022.Day16,
        Years.Year2022.Day17,
        Years.Year2022.Day18,
        Years.Year2022.Day19,
        Years.Year2022.Day20,
        Years.Year2022.Day21,
        Years.Year2022.Day22,
        Years.Year2022.Day23,
        Years.Year2022.Day24,
        Years.Year2022.Day25,
        Years.Year2023,
        Years.Year2023.Day01,
        Years.Year2023.Day02,
        Years.Year2023.Day03,
        Years.Year2023.Day04,
        Years.Year2023.Day05,
        Years.Year2023.Day06,
        Years.Year2023.Day07,
        Years.Year2023.Day08,
        Years.Year2023.Day09,
        Years.Year2023.Day10,
        Years.Year2023.Day11,
        Years.Year2023.Day12,
        Years.Year2023.Day13,
        Years.Year2023.Day14,
        Years.Year2023.Day15,
        Years.Year2023.Day16,
        Years.Year2023.Day17,
        Years.Year2023.Day18,
        Years.Year2023.Day19,
        Years.Year2023.Day20,
        Years.Year2023.Day21,
        Years.Year2023.Day22,
        Years.Year2023.Day23,
        Years.Year2023.Day24,
        Years.Year2023.Day25,
        Years.Year2024,
        Years.Year2024.Day01,
        Years.Year2024.Day02,
        Years.Year2024.Day03,
        Years.Year2024.Day04,
        Years.Year2024.Day05,
        Years.Year2024.Day06,
        Years.Year2024.Day07,
        Years.Year2024.Day08,
        Years.Year2024.Day09,
        Years.Year2024.Day10,
        Years.Year2024.Day11,
        Years.Year2024.Day12,
        Years.Year2024.Day13,
        Years.Year2024.Day14,
        Years.Year2024.Day15,
        Years.Year2024.Day16,
        Years.Year2024.Day17,
        Years.Year2024.Day18,
        Years.Year2024.Day19,
        Years.Year2024.Day20,
        Years.Year2024.Day21,
        Years.Year2024.Day22,
        Years.Year2024.Day23,
        Years.Year2024.Day24,
        Years.Year2024.Day25

    build-depends:
        base,
        bimap,
        bytestring,
        Clipboard,
        containers >=0.7,
        deepseq,
        directory,
        dotenv,
        extra,
        fingertree,
        hex,
        hmatrix,
        html-conduit,
        http-client,
        http-conduit,
        http-types,
        monad-loops,
        process,
        regex-compat,
        regex-tdfa,
        simple-vec3,
        split,
        tagsoup,
        text,
        time,
        vector

    hs-source-dirs:   app
    default-language: GHC2024
    default-extensions:
        NamedFieldPuns
        RecordWildCards
        DuplicateRecordFields
        OverloadedRecordDot
